[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/GameHUD/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/GameHUD/RaceCountdown/RaceCountdown.gd" type="Script" id=2]
[ext_resource path="res://Scenes/GameHUD/Gradiants.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 160
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Go" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 396.0
margin_top = 132.0
margin_right = 615.0
margin_bottom = 321.0
custom_fonts/font = SubResource( 1 )
text = "GO"

[node name="One" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 437.0
margin_top = 132.0
margin_right = 574.0
margin_bottom = 321.0
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="Two" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 437.0
margin_top = 132.0
margin_right = 574.0
margin_bottom = 321.0
custom_fonts/font = SubResource( 1 )
text = "2"

[node name="Three" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 437.0
margin_top = 132.0
margin_right = 574.0
margin_bottom = 321.0
custom_fonts/font = SubResource( 1 )
text = "3"

[node name="CountdownTimer" type="Timer" parent="."]
autostart = true

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.317647 )
margin_left = 241.0
margin_top = 407.0
margin_right = 1967.0
margin_bottom = 533.0
rect_scale = Vector2( 0.3, 0.5 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 3 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GameGoal" type="Label" parent="."]
margin_left = 335.0
margin_top = 416.0
margin_right = 631.0
margin_bottom = 487.0
rect_pivot_offset = Vector2( -773, 109 )
custom_fonts/font = SubResource( 2 )
text = "complete all the labs"

[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
